add params for open meteo passthrough
